--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.TiendaMascotas"
         tools:targetApi="31">
         <activity
+            android:name=".PantallaPrincipal2"
+            android:exported="false"
+            android:label="@string/title_activity_pantalla_principal2"
+            android:theme="@style/Theme.TiendaMascotas" />
+        <activity
             android:name=".PantallaNo2"
             android:exported="false"
             android:label="@string/title_activity_pantalla_no2"
