--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.TiendaMascotas"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityMascotas"
+            android:exported="false"
+            android:label="@string/title_activity_mascotas"
+            android:theme="@style/Theme.TiendaMascotas" />
+        <activity
+            android:name=".ActivityComidas"
+            android:exported="false"
+            android:label="@string/title_activity_comidas"
+            android:theme="@style/Theme.TiendaMascotas" />
+        <activity
+            android:name=".ActivityAccesorios"
+            android:exported="false"
+            android:label="@string/title_activity_accesorios"
+            android:theme="@style/Theme.TiendaMascotas" />
+        <activity
             android:name=".ListActivity"
             android:exported="false"
             android:label="@string/title_activity_list"
